--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .background {
     background-image: url('https://img.freepik.com/premium-photo/ingredients-homemade-pizza-white-wooden-background_35641-4026.jpg?w=996');
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding-top: 90px;
@@ -145,6 +145,19 @@ ul li {
     }
     .background {
         padding-top: 200px;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .center {
+        width: 320px;
+        height: 480px;
+    }
+    .btnnn {
+        margin-left: 50px;
+    }
+    .background {
+        padding-top: 90px;
     }
 }
 
